# eWaterCycle-DA

./: .gitignore  CHANGELOG.md  README.MD  README.md  pyproject.toml
.github/workflows/: python-publish.yml
docs/: conf.py  example_HBV_model.ipynb  example_HBV_model_EnKF.ipynb  example_HBV_model_PF.ipynb  example_HBV_model_PF_1.ipynb  index.rst
docs/.ipynb_checkpoints/: 7. Rewrite fully- Camels HBV-checkpoint.ipynb  example_HBV_model-checkpoint.ipynb
docs/examples/: example_HBV_model_EnKF.ipynb  example_HBV_model_PF_2.ipynb
docs/source/: conf.py  index.rst
src/eWaterCycle_DA/: DA.py
src/ewatercycle_DA/: DA.py  lorenz.py  utils.py
src/ewatercycle_DA/data_assimilation_schemes/: EnKF.py  PF.py
tests/: visually_test_local_lorenz_model.ipynb
tests/.ipynb_checkpoints/: visually_test_local_lorenz_model-checkpoint.ipynb
